--- a/pkgs/dealii.yaml
+++ b/pkgs/dealii.yaml
@@ -2,8 +2,8 @@ extends: [cmake_package]
 
 sources:
 - key: tar.gz:jxpxeyzowua6dsau4km7gl6aj7libvx5
-  url: file:dealii-8.3.0.tar.gz
-#  url: https://github.com/dealii/dealii/releases/download/v8.3.0/dealii-8.3.0.tar.gz
+#  url: file:dealii-8.3.0.tar.gz
+  url: https://github.com/dealii/dealii/releases/download/v8.3.0/dealii-8.3.0.tar.gz
 
 
 # The packages list specifies all the packages that you
